# tree-sitter-go_tags

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-go_tags.pc.in
bindings/c/tree_sitter/: tree-sitter-go-tags.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_go_tags/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSittergoTagsTests/: TreeSittergoTagsTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
