[package]
name = "tree-sitter-go-tags"
description = "This is a treesitter highlight syntax for go tags "
version = "0.1.0"
authors = ["DanWlker <danielhee2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "go-tags"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/danwlker/tree-sitter-go_tags"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
